# TCC-Controle-de-Maquina

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TCC_ControleDeMaquina  TCC_ControleDeMaquina_pt_BR.ts  cmake_install.cmake  homedevice.cpp  homedevice.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  serialport.cpp  serialport.hpp
.cmake/api/v1/reply/: cache-v2-db01ec8ee03ad25a1dea.json  cmakeFiles-v1-c0a4e0683c6429b262bd.json  codemodel-v2-f071d4a236d224eb31ed.json  index-2022-10-07T00-06-30-0813.json  target-TCC_ControleDeMaquina-Debug-d82f07461a8ea2efed79.json  target-TCC_ControleDeMaquina_autogen-Debug-3b252f477a155e20b637.json
ControleDeMaquina - Interface/: .gitignore  CMakeLists.txt  README.md
ControleDeMaquina - Interface/lib/ui/: areadecontrole.ui
ControleDeMaquina - Interface/src/: main.cpp
ControleDeMaquina - Interface/src/AreaDeControle/: areadecontrole.cpp  areadecontrole.hpp
ControleDeMaquina - Interface/src/ComunicacaoSerial/: serialport.cpp  serialport.hpp
ControleDeMaquina - Interface/src/TelaInicial/: mainwindow.cpp  mainwindow.hpp
ControleDeMaquina - Interface/ui/: areadecontrole.ui  mainwindow.ui
ControleDeMaquina - Microprograma/: README.md  UART.c  UART.h  lcd.c  lcd.h  main.c  setup.h  step.c  step.h
ControleDeMaquina - Microprograma/nbproject/: configurations.xml  project.xml
TCC_ControleDeMaquina_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
lib/ui/: areadecontrole.ui  mainwindow.ui
libs/ui/: mainwindow.ui
qml/AreaDeControle/: HomeDevice.qml
src/: homedevice.cpp  main.cpp  mainwindow.cpp  serialport.cpp
src/AreaDeControle/: areadecontrole.cpp  areadecontrole.hpp  homedevice.cpp  homedevice.hpp
src/AreaDeControle/qml/: HomeDevice.qml  HomeDeviceForm.ui.qml  qml.qrc  qtquickcontrols2.conf
src/ComunicacaoSerial/: serialport.cpp  serialport.hpp
src/TelaInicial/: mainwindow.cpp  mainwindow.hpp
src/includes/: homedevice.hpp  mainwindow.hpp
